# names-scrabble-board

./: README.md  pyproject.toml  render_scrabble_tiles.py  scrabble_crossword.py
data/: names.txt
